--- a/personal/templates/personal/index.html
+++ b/personal/templates/personal/index.html
@@ -117,7 +117,8 @@
         <section id="about" class="s-about target-section">
           <div class="row about-info wide" data-animate-block>
             <div class="column lg-6 md-12 about-info__pic-block">
-              <img src="{% static 'static/images/about-photo.jpg' %}" srcset="{% static 'static/images/about-photo.jpg' %} 1x, {% static 'static/images/about-photo@2x.jpg' %} 2x" alt="" class="about-info__pic" data-animate-el />
+              {% comment %} <img src="{% static 'static/images/about-photo.jpg' %}" srcset="{% static 'static/images/about-photo.jpg' %} 1x, {% static 'static/images/about-photo@2x.jpg' %} 2x" alt="" class="about-info__pic" data-animate-el /> {% endcomment %}
+              <img src="https://api.minio.dickyjoel.icu/porto/media/images/WhatsApp_Image_2025-07-05_at_21.39.42.original.jpg" srcset="https://api.minio.dickyjoel.icu/porto/media/images/WhatsApp_Image_2025-07-05_at_21.39.42.original.jpg 1x, https://api.minio.dickyjoel.icu/porto/media/images/WhatsApp_Image_2025-07-05_at_21.39.42.original.jpg 2x" alt="" class="about-info__pic" data-animate-el />
             </div>
 
             <div class="column lg-6 md-12">
